1.1a3 (2009-09-16)
==================

Documentation
-------------

- The "Views" narrative chapter in the documentation has been updated
  extensively to discuss "renderers".

Features
--------

- A ``renderer`` attribute has been added to view configurations,
  replacing the previous (1.1a2) version's ``template`` attribute.  A
  "renderer" is an object which accepts the return value of a view and
  converts it to a string.  This includes, but is not limited to,
  templating systems.

- A new interface named ``IRenderer`` was added.  The existing
  interface, ``ITemplateRenderer`` now derives from this new
  interface.  This interface is internal.

- A new interface named ``IRendererFactory`` was added.  An existing
  interface named ``ITemplateRendererFactory`` now derives from this
  interface.  This interface is internal.

- The ``view`` attribute of the ``view`` ZCML directive is no longer
  required if the ZCML directive also has a ``renderer`` attribute.
  This is useful when the renderer is a template renderer and no names
  need be passed to the template at render time.

- A new zcml directive ``renderer`` has been added.  It is documented
  in the "Views" narrative chapter of the documentation.

- A ZCML ``view`` directive (and the associated ``bfg_view``
  decorator) can now accept a "wrapper" value.  If a "wrapper" value
  is supplied, it is the value of a separate view's *name* attribute.
  When a view with a ``wrapper`` attribute is rendered, the "inner"
  view is first rendered normally.  Its body is then attached to the
  request as "wrapped_body", and then a wrapper view name is looked up
  and rendered (using ``repoze.bfg.render_view_to_response``), passed
  the request and the context.  The wrapper view is assumed to do
  something sensible with ``request.wrapped_body``, usually inserting
  its structure into some other rendered template.  This feature makes
  it possible to specify (potentially nested) "owrap" relationships